--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.4.2",
     "slugify": "^1.6.6",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
