--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.4.2",
+    "nanoid": "^5.1.5",
     "slugify": "^1.6.6",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
@@ -34,6 +36,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nanoid": "^2.1.0",
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
