--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rbac",
+  "name": "backend-payment-gateway",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -17,8 +17,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/cors": "^2.8.17",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
